--- a/UnitTestCSS1/www/css/prototype.css
+++ b/UnitTestCSS1/www/css/prototype.css
@@ -10,7 +10,6 @@ body {
 	padding-right: 5%;
 	padding-top: 5%;
 	padding-bottom: 5%;
-	border-style: solid;
 }
 /* Paged Layout */
 body {
@@ -25,13 +24,10 @@ body {
 body {
 	font-family: serif;
 	font-size: 1.0em;
-	color: #00FF00;
+	color: #000000;
 	line-height: 1.2;
 	text-align: justify; /* or start */
 	direction: ltr;
-	word-spacing: normal;
-	letter-spacing: normal;
-	white-space: normal;
 }
 /* Book Title Main */
 p.mt {
@@ -41,7 +37,6 @@ p.mt {
 	color: #0943B2;
 	line-height: 1.0;
 	text-align: center;
-	direction: ltr;
 }
 /* Book Title Smaller */
 p.mt2 {
@@ -51,7 +46,6 @@ p.mt2 {
 	color: #0943B2;
 	line-height: 1.0;
 	text-align: center;
-	direction: ltr;
 }
 /* Book Title Smallest */
 p.mt3 {
@@ -60,7 +54,20 @@ p.mt3 {
 	color: #005AB3; /* Dark Blue */
 	line-height: 1.0;
 	text-align: center;
-	direction: ltr;
+}
+/* Section Heading */
+p.ms {
+	font-family: serif;
+	font-size: 1.3em;
+	color: #0943B2; /* Dark Blue */
+	line-height: 1.0;
+	text-align: center;
+}
+/* Descriptive Title */
+p.d {
+	font-size: 0.9em;
+	color: #0943B2;
+	text-align: center;
 }
 /* Chapter Number Format */
 p.c {
@@ -80,27 +87,59 @@ span.v {
 /* Normal Paragraph Text */
 p.p {
 	text-indent: 5%;
-	color: #000000;
+}
+/* Normal Paragraph w/o Indentation */
+p.m {
+	text-indent: 0;
+}
+/* p.b is blank line and requires no style */
+/* Start of Blockquote */
+p.mi {
+	padding-left: 6%;
+	padding-right: 6%;
+}
+/* Continuation of Blockquote */
+p.pi {
+	padding-left: 6%;
+	padding-right: 6%;
+}
+/* Out indented list item */
+p.li {
+	text-indent: -5%;
+	padding-left:10%;
+	margin: 0;
+}
+/* Speaker Name */
+p.sp {
+	padding-left: 6%;
+	font-size: 1.0em;
+	font-weight: bold;
+	margin-bottom: 3;
 }
 /* Poetry First Line */
 p.q {
-	color: #000000;
 	padding-left: 6%;
 	padding-right: 6%;
 	margin: 0;
 }
 /* Poetry Second Line */
 p.q2 {
-	color: #000000;
 	padding-left: 10%;
 	margin: 0;
 }
 /* Continuation Paragraph as start of Chapter */
 p.nb {
-	color: #000000;
 	text-indent: 0;
+}
+/* Selah */
+span.qs {
+	display: block;
+	text-align: right;
+	/* This needs to right align with the poetry, not the width of the page. */
+	font-style: italic;
 }
 /* Words of Jesus */
 span.wj {
 	color: #FF3333;
 }
+
