--- a/UnitTestCSS1/www/css/prototype.css
+++ b/UnitTestCSS1/www/css/prototype.css
@@ -74,7 +74,8 @@ p.c {
 	font-family: sans-serif;
 	font-size: 1.5em;
 	color: #005AB3;
-	line-height: 1.0;
+	line-height: 1.2;
+	margin-bottom: 3;
 }
 /* Verse Number Format */
 span.v {
