--- a/UnitTestCSS1/platforms/ios/www/css/prototype.css
+++ b/UnitTestCSS1/platforms/ios/www/css/prototype.css
@@ -1,25 +1,27 @@
 /* background */
-body {
+/*body { not working
 	background-color: #FF000;
 	background-image: url(<uri>);
-	/* gradient is possible by using canvas */
-}
+	/* gradient is possible by using canvas
+}*/
 /* margins */
 body {
-	padding-left: 5%;
+	/*padding-left: 5%;
 	padding-right: 5%;
 	padding-top: 5%;
-	padding-bottom: 5%;
+	padding-bottom: 5%;*/
+	margin: 10%;
+	margin-top: 10%;
 }
 /* Paged Layout */
-body {
+/*body {// not working
 	page: auto;
-	break-before: avoid-page;/* or avoid-column */
+	break-before: avoid-page;
 	orphans: 2;
 	widows: 2;
 	column-count: 3;
 	column-gap: 2.5%;
-}
+}*/
 /* Text Format */
 body {
 	font-family: serif;
@@ -28,6 +30,9 @@ body {
 	line-height: 1.2;
 	text-align: justify; /* or start */
 	direction: ltr;
+	/*width: 100;
+	height: 100;
+	overflow: hidden;*/
 }
 /* Book Title Main */
 p.mt {
@@ -74,7 +79,8 @@ p.c {
 	font-family: sans-serif;
 	font-size: 1.5em;
 	color: #005AB3;
-	line-height: 1.0;
+	line-height: 1.2;
+	margin-bottom: 3;
 }
 /* Verse Number Format */
 span.v {
