--- a/BibleAppNW/css/bible.css
+++ b/BibleAppNW/css/bible.css
@@ -1,3 +1,5 @@
+
+/***** all body settings need to be moved to affect codex only ******/
 /* background */
 body {
 	background-color: #FEFEFE;
@@ -28,9 +30,28 @@ body {
 	line-height: 1.3;
 	text-align: justify; /* or start */
 	direction: ltr;
-	/*width: 100;
-	height: 100;
-	overflow: hidden;*/
+}
+/* Table of Contents Page Format */
+div.tocPage {
+	margin: 0%;
+	padding: 0%;
+	border-style: solid;
+}
+/* Table of Contents Book Name Format */
+p.tocBook {
+	font-family: sans-serif;
+	font-size: 1.5em;
+	color: #666666;
+	text-align: start;
+}
+/* Table of Contents Chapter Number Format */
+table.tocChap {
+	font-family: sans-serif;
+	font-size: 1.0em;
+	color: #666666;
+	width: 100%;
+	text-align: center;
+	line-height: 2.0;
 }
 /* Book Title Main */
 p.mt {
