--- a/BibleAppNW/css/bible.css
+++ b/BibleAppNW/css/bible.css
@@ -62,6 +62,15 @@ p.mt {
 	line-height: 1.0;
 	text-align: center;
 }
+/* Book Main Title, Level 1 */
+p.mt1 {
+	font-family: serif;
+	font-size: 2.5em;
+	/*color: #005AB3; *//* Dark Blue */
+	color: #0943B2;
+	line-height: 1.0;
+	text-align: center;
+}
 /* Book Title Smaller */
 p.mt2 {
 	font-family: serif;
