--- a/BibleAppNW/css/bible.css
+++ b/BibleAppNW/css/bible.css
@@ -1,15 +1,5 @@
-
-/***** all body settings need to be moved to affect codex only ******/
-/* background */
-body {
+body { /* non-std */
 	background-color: #FEFEFE;
-}
-/* margins */
-body {
-	/*padding-left: 5%;
-	padding-right: 5%;
-	padding-top: 5%;
-	padding-bottom: 5%;*/
 	margin: 10%;
 	margin-top: 10%;
 }
@@ -25,27 +15,27 @@ body {
 /* Text Format */
 body {
 	font-family: serif;
-	font-size: 1.0em;
+	font-size: 14pt;
 	color: #000000;
-	line-height: 1.3;
-	text-align: justify; /* or start */
+	line-height: 1.3; /* non-std */
+	text-align: justify; /* non-std */
 	direction: ltr;
 }
 /* Table of Contents Page Format */
-div.tocPage {
+div.tocPage { /* non-std */
 	margin: 0%;
 	padding: 0%;
 	border-style: solid;
 }
 /* Table of Contents Book Name Format */
-p.tocBook {
+p.tocBook { /* non-std */
 	font-family: sans-serif;
 	font-size: 1.5em;
 	color: #666666;
 	text-align: start;
 }
 /* Table of Contents Chapter Number Format */
-table.tocChap {
+table.tocChap { /* non-std */
 	font-family: sans-serif;
 	font-size: 1.0em;
 	color: #666666;
@@ -53,164 +43,203 @@ table.tocChap {
 	text-align: center;
 	line-height: 2.0;
 }
+/* article element is at beginning of each book */
+article { /* non-std */
+	margin-bottom: 1.0in;
+}
 /* Book Title Main */
 p.mt {
-	font-family: serif;
-	font-size: 2.5em;
-	/*color: #005AB3; *//* Dark Blue */
-	color: #0943B2;
-	line-height: 1.0;
+	font-weight: bold;
+	font-size: 1.66em;
 	text-align: center;
+	margin-bottom: 4pt;
+	margin-top: 8pt;
+	color: #0943B2; /* non-std */
 }
 /* Book Main Title, Level 1 */
 p.mt1 {
-	font-family: serif;
-	font-size: 2.5em;
-	/*color: #005AB3; *//* Dark Blue */
-	color: #0943B2;
-	line-height: 1.0;
+	font-weight: bold;
+	font-size: 1.66em;
 	text-align: center;
+	margin-bottom: 4pt;
+	margin-top: 2pt;
+	color: #0943B2; /* non-std */
 }
-/* Book Title Smaller */
+/* Book Title Above Main TitleSmaller */
 p.mt2 {
-	font-family: serif;
-	font-size: 1.5em;
-	/*color: #005AB3; *//* Dark Blue */
-	color: #0943B2;
-	line-height: 1.0;
+	font-size: 1.33em;
+	font-style: italic;
 	text-align: center;
+	margin-bottom: 2pt;
+	color: #0943B2; /* non-std */
 }
 /* Book Title Smallest */
 p.mt3 {
-	font-family: serif;
-	font-size: 1.2em;
-	color: #005AB3; /* Dark Blue */
-	line-height: 1.0;
+	font-weight: bold;
+	font-size: 1.33em;
 	text-align: center;
+	margin-bottom: 2pt;
+	margin-top: 2pt;
+	color: #0943B2; /* non-std */
 }
 /* Section Heading */
 p.ms {
-	font-family: serif;
-	font-size: 1.3em;
-	color: #0943B2; /* Dark Blue */
-	line-height: 1.0;
+	font-weight: bold;
+	font-size: 1.16em;
 	text-align: center;
+	margin-bottom: 4pt;
+	margin-top: 16pt;
+	color: #0943B2; /* non-std */
 }
 /* Section Heading Level 1 */
 p.ms1 {
-	font-family: serif;
 	font-weight: bold;
     font-size: 1.16em;
     text-align: center;
     margin-bottom: 4pt;
 	margin-top: 16pt;
-	border-style: none;
+	color: #0943B2; /* non-std */
 }
 /* Descriptive Title */
 p.d {
-	font-size: 0.9em;
-	color: #0943B2;
+	font-style: italic;
 	text-align: center;
+	margin-bottom: 4pt;
+	margin-top: 4pt;
+	color: #0943B2;
 }
 /* Chapter Number Format */
 p.c {
-	font-family: sans-serif;
 	font-size: 1.5em;
-	color: #005AB3;
-	line-height: 1.2;
-	margin-bottom: 3;
+	color: #005AB3; /* non-std */
+	text-align: start;
+	margin-top: 8pt;
+	margin-bottom: 4pt;
 }
+/* p.cl Chapter Label is not yet supported
+the p.cl appears once at the beginning of Psalms
+and needs to be repeated with each chapter.
+Supporting this is a TBD */
 /* Verse Number Format */
 span.v {
-	font-family: sans-serif;
-	font-size: 0.7em;
-	color: #777777;
-	line-height: 0.7em;
+	font-family: sans-serif; /* non-std */
+	font-size: 0.66em;
+	color: #777777; /* non-std */
+	text-align: start;
 	vertical-align: text-top;
+	white-space: nowrap;
 }
 /* Normal Paragraph Text */
 p.p {
-	text-indent: 5%;
+	text-align: start;
+	text-indent: 0.125in;
 }
 /* Normal Paragraph w/o Indentation */
 p.m {
+	text-align:left;
 	text-indent: 0;
 }
-/* p.b is blank line and requires no style */
+/* p.b is blank line */
+p.b {
+	text-indent: start;
+	font-size: 0.83em;
+}
 /* Start of Blockquote */
 p.mi {
-	padding-left: 6%;
-	padding-right: 6%;
+	text-align: start;
+	margin-left: 0.25in;
+	margin-right: 0.25in;
 }
 /* Continuation of Blockquote */
 p.pi {
-	padding-left: 6%;
-	padding-right: 6%;
+	text-align: start;
+	text-indent: 0.125in;
+	margin-left: 0.25in;
+	margin-right: 0.25in;
 }
 /* Out indented list item */
 p.li {
-	text-indent: -5%;
-	padding-left:10%;
-	margin: 0;
+	text-indent: -0.375in;
+	text-align: start;
+	margin-left: 0.5in;
+}
+/* Out indented list item level 1 */
+p.li1 {
+	text-indent: -0.375in;
+	text-align: start;
+	margin-left: 0.5in;
 }
 /* Speaker Name */
 p.sp {
-	padding-left: 6%;
-	font-size: 1.0em;
-	font-weight: bold;
-	margin-bottom: 3;
+	font-style: italic;
+	text-align: start;
+	margin-bottom: 4pt;
+	margin-top: 8pt;
 }
 /* Poetry First Line */
 p.q {
-	padding-left: 6%;
-	padding-right: 6%;
-	margin: 0;
+	text-align: start;
+	text-indent: -1in;
+	margin-left: 1.25in;
+	margin-top: 0; /* non-std */
+	margin-bottom: 0; /* non-std */
 }
 /* Poetry First Line */
 p.q1 {
-	padding-left: 6%;
-	padding-right: 6%;
-	margin: 0;
+	text-align: start;
+	text-indent: -1in;
+	margin-left: 1.25in;
+	margin-top: 0; /* non-std */
+	margin-bottom: 0; /* non-std */
 }
 /* Poetry Second Line */
 p.q2 {
-	padding-left: 10%;
-	margin: 0;
+	text-align: start;
+	text-indent: -0.75in;
+	margin-left: 1.25in;
+	margin-top: 0; /* non-std */
+	margin-bottom: 0; /* non-std */
 }
 /* Continuation Paragraph as start of Chapter */
 p.nb {
+	text-align: start;
 	text-indent: 0;
 }
 /* Selah */
 span.qs {
-	display: block;
-	text-align: right;
+	display: block; /* non-std */
+	text-align: right; /* non-std left is std */
 	/* This needs to right align with the poetry, not the width of the page. */
 	font-style: italic;
 }
 /* Words of Jesus */
 span.wj {
-	color: #FF3333;
+	color: #FF3333; /* std is #FF0000 */
+	text-align: start;
 }
 /* footnote references */
 span.topf, span.topx {
-	font-size: 1.0em;
-	color: #FFB4B5;
+	text-align: start;
+	color: #FFB4B5; /* non-std */
 }
 /* footnotes */
 span.f, span.ft {
-	color: #555555;
-	background-color: #FFFFB4;
-	font-style: italic;
+	text-indent: start;
+	color: #555555; /* non-std */
+	background-color: #FFFFB4; /* non-std */
+	/* font-style: italic; */
 }
 /* footnote alternate translation */
 span.fqa {
-	color: #999999 ;
-	background-color: #FFFFB4;
+	text-align: start;
+	font-style: italic;
+	color: #999999 ; /* non-std */
+	background-color: #FFFFB4; /* non-std */
 }
 /* cross references */
 span.x, span.xt {
-	color: #555555;
-	background-color: #CEE7FF;
+	text-align: start;
+	color: #555555; /* non-std */
+	background-color: #CEE7FF; /* non-std */
 }
 
