--- a/BibleAppNW/css/bible.css
+++ b/BibleAppNW/css/bible.css
@@ -1,7 +1,14 @@
-body { /* non-std */
-	background-color: #FEFEFE;
+body {
+	margin: 0;
+}
+#searchRoot {
 	margin: 10%;
-	margin-top: 10%;
+}
+#historyRoot {
+	margin: 10%;
+}
+#settingsRoot {
+	margin: 10%;
 }
 /* Paged Layout */
 /*body {// not working
@@ -12,14 +19,18 @@ body { /* non-std */
 	column-count: 3;
 	column-gap: 2.5%;
 }*/
-/* Text Format */
-body {
-	font-family: serif;
-	font-size: 14pt;
-	color: #000000;
-	line-height: 1.3; /* non-std */
-	text-align: justify; /* non-std */
-	direction: ltr;
+#statusRoot {
+	margin: 0;
+}
+/* StatusBar Heading Text */
+span.statusBar {
+	font-family: sans-serif;
+	font-size: 20pt;
+	text-align: center;
+	white-space: nowrap;
+}
+#tocRoot {
+	margin: 10%;
 }
 /* Table of Contents Page Format */
 div.tocPage { /* non-std */
@@ -42,6 +53,15 @@ table.tocChap { /* non-std */
 	width: 100%;
 	text-align: center;
 	line-height: 2.0;
+}
+#codexRoot {
+	margin: 10%;
+	font-family: serif;
+	font-size: 14pt;
+	color: #000000;
+	line-height: 1.3; /* non-std */
+	text-align: justify; /* non-std */
+	direction: ltr;
 }
 /* article element is at beginning of each book */
 article { /* non-std */
