--- a/BibleAppNW/css/bible.css
+++ b/BibleAppNW/css/bible.css
@@ -65,6 +65,11 @@ table.tocChap { /* non-std */
 	text-align: justify; /* non-std */
 	direction: ltr;
 }
+/* remove scrollbars, ideally only for #codexRoot
+but, I have only been able to do it for all. */
+::-webkit-scrollbar { 
+    display: none;
+}
 /* article element is at beginning of each book */
 article { /* non-std */
 	margin-bottom: 1.0in;
