--- a/BibleAppNW/css/bible.css
+++ b/BibleAppNW/css/bible.css
@@ -33,12 +33,13 @@ span.statusBar {
 	white-space: nowrap;
 }
 #tocRoot {
-	margin: 10%;
+	margin-top: 17%;
+	margin-bottom: 0%; /* this doesn't seem to work */
+	margin-left: 10%;
+	margin-right: 10%;
 }
 /* Table of Contents Page Format */
 div.tocPage { /* non-std */
-	padding: 0%;
-	border-style: solid;
 }
 /* Table of Contents Book Name Format */
 p.tocBook { /* non-std */
