--- a/BibleAppNW/css/bible.css
+++ b/BibleAppNW/css/bible.css
@@ -45,17 +45,25 @@ div.tocPage { /* non-std */
 p.tocBook { /* non-std */
 	font-family: sans-serif;
 	font-size: 1.5em;
-	color: #666666;
+	color: #777777;
 	text-align: start;
 }
 /* Table of Contents Chapter Number Format */
 table.tocChap { /* non-std */
+	table-layout: fixed;
+	border-collapse: collapse;
 	font-family: sans-serif;
 	font-size: 1.0em;
-	color: #666666;
+	color: #777777;
 	width: 100%;
 	text-align: center;
 	line-height: 2.0;
+}
+/* Table of Contents Chapter number cells */
+td.tocChap { /* non-std */
+	border-width: 1px;
+	border-style: solid;
+	border-color: #777777;
 }
 #codexRoot {
 	margin: 10%;
