--- a/BibleAppNW/css/Status.css
+++ b/BibleAppNW/css/Status.css
@@ -7,4 +7,10 @@
 	position: fixed;
 	left: 0;
 	top: 0;
+	width: auto;
+}
+/* Search input field */
+input.searchField {
+	font-family: sans-serif;
+	font-size: 2.0em;
 }
