HistoryView is fairly well placed.

--- a/BibleAppNW/css/History.css
+++ b/BibleAppNW/css/History.css
@@ -3,44 +3,28 @@
 */
 
 #historyRoot {
-	margin: 0;
-}
-.tabs {
-  position: relative;   
-  min-height: 200px; /* This part sucks */
-  clear: both;
-  margin: 25px 0;
-}
-.tab {
-  float: left;
-}
-.tab label {
-  background: #eee; 
-  padding: 10px; 
-  border: 1px solid #ccc; 
-  margin-left: -1px; 
-  position: relative;
-  left: 1px; 
-}
-.tab [type=radio] {
-  display: none;   
-}
-.content {
-  position: absolute;
-  top: 28px;
+  position: fixed;
+  top: 95px;
   left: 0;
-  background: white;
-  right: 0;
-  bottom: 0;
-  padding: 20px;
+	margin: 0;
+  padding: 0;
+  border-style: solid;
+}
+#historyTabBar {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+li.historyTab {
+  margin: 0;
+  padding: 2;
+  text-align: right;
+}
+button.historyTabBtn {
+  background: #eee;
+  margin: 0;
+  padding: 10px;
   border: 1px solid #ccc; 
-}
-[type=radio]:checked ~ label {
-  background: white;
-  border-bottom: 1px solid white;
-  z-index: 2;
-}
-/* this should not be needed, i think */
-[type=radio]:checked ~ label ~ .content {
-  z-index: 1;
+  font-family: sans-serif;
+  font-size: 1.0em;
 }
