Run under android for the first time, and add px units to css entries with no units.

--- a/BibleAppCLI/platforms/ios/www/css/BibleApp.css
+++ b/BibleAppCLI/platforms/ios/www/css/BibleApp.css
@@ -244,7 +244,7 @@ span.x, span.xt {
 }
 li.historyTab {
   margin: 0;
-  padding: 2;
+  padding: 2px;
   text-align: right;
 }
 button.historyTabBtn {
