--- a/BibleAppCLI/www/css/BibleApp.css
+++ b/BibleAppCLI/www/css/BibleApp.css
@@ -233,7 +233,7 @@ span.x, span.xt {
 
 #historyRoot {
   position: fixed;
-  top: 95px; /* Will need to vary with device size */
+  top: 70px; /* Will need to vary with device size */
   left: -150px; /* Will need to vary with device size */
 	margin: 0;
   padding: 0;
@@ -251,10 +251,10 @@ li.historyTab {
   text-align: right;
 }
 button.historyTabBtn {
-  background: #eee;
+  background-color: #CFFFF6;
   margin: 0;
   padding: 10px;
-  border: 1px solid #ccc; 
+  border: 1px solid #ccc;
   font-family: sans-serif;
   font-size: 1.0em;
 }/**
@@ -405,7 +405,7 @@ input.searchField {
 */
 
 #tocRoot {
-	position: absolute;
+	position: absolute; /* I wonder if fixed would give better animation results? */
 	left: 0;
 	top: 0;
 	margin-top: 7%;
