--- a/BibleAppCLI/platforms/browser/www/css/BibleApp.css
+++ b/BibleAppCLI/platforms/browser/www/css/BibleApp.css
@@ -3,6 +3,7 @@
 */
 body {
 	margin: 0;
+	background-color: '#FF0000'; /* here to help debug flashes */
 }
 #codexRoot {
 	margin: 7%;
@@ -12,6 +13,7 @@ body {
 	line-height: 1.3; /* non-std */
 	text-align: justify; /* non-std */
 	direction: ltr;
+	z-index: 0;
 }
 /* Paged Layout */
 /*body {// not working
@@ -231,10 +233,11 @@ span.x, span.xt {
 
 #historyRoot {
   position: fixed;
-  top: 95px; /* Will need to vary with device size */
+  top: 70px; /* Will need to vary with device size */
   left: -150px; /* Will need to vary with device size */
 	margin: 0;
   padding: 0;
+  z-index: 10;
   /*border-style: solid; for testing */
 }
 #historyTabBar {
@@ -248,10 +251,10 @@ li.historyTab {
   text-align: right;
 }
 button.historyTabBtn {
-  background: #eee;
+  background-color: #CFFFF6;
   margin: 0;
   padding: 10px;
-  border: 1px solid #ccc; 
+  border: 1px solid #ccc;
   font-family: sans-serif;
   font-size: 1.0em;
 }/**
@@ -260,6 +263,7 @@ button.historyTabBtn {
 /* Static container for questionsView */
 #questionsRoot {
 	margin: 10%;
+	z-index: 20;
 }
 /* Generated container for all questions and answers */
 #questionsView {
@@ -352,6 +356,7 @@ p.ansText {
 
 #searchRoot {
 	margin: 10%;
+	z-index: 30;
 }
 /* Search Results Book Name */
 span.conBook {
@@ -388,21 +393,26 @@ span.conWord {
 	left: 0;
 	top: 0;
 	width: auto;
+	z-index: 1000;
 }
 /* Search input field */
 input.searchField {
 	font-family: sans-serif;
-	font-size: 2.0em;
+	font-size: 1.2em;
 }
 /**
 * This css file pertains to the TableContentsView
 */
 
 #tocRoot {
-	margin-top: 80px;
+	position: absolute; /* I wonder if fixed would give better animation results? */
+	left: 0;
+	top: 0;
+	margin-top: 7%;
 	margin-bottom: 0%; /* this doesn't seem to work */
 	margin-left: 10%;
 	margin-right: 10%;
+	z-index: 100;
 }
 /* Table of Contents Page Format */
 div.tocPage { /* non-std */
