--- a/QAApp/views/LoginView.html
+++ b/QAApp/views/LoginView.html
@@ -1,35 +1,91 @@
 <html>
 <head>
+	<style>
+/* CSS styling of input fields taken from http://webdesignerwall.com/tutorials/beautiful-css3-search-form */
+.fieldBorder {
+	display: inline-block;
+	zoom: 1; /* ie7 hack for display:inline-block */
+	*display: inline;
+	border: solid 1px #d2d2d2;
+	padding: 3px 5px;
+	
+	-webkit-border-radius: 2em;
+	-moz-border-radius: 2em;
+	border-radius: 2em;
+
+	-webkit-box-shadow: 0 1px 0px rgba(0,0,0,.1);
+	-moz-box-shadow: 0 1px 0px rgba(0,0,0,.1);
+	box-shadow: 0 1px 0px rgba(0,0,0,.1);
+
+	background: #f1f1f1;
+	background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#ededed));
+	background: -moz-linear-gradient(top,  #fff,  #ededed);
+	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#ededed'); /* ie7 */
+	-ms-filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#ededed'); /* ie8 */
+}
+.fieldBorder input {
+	font: normal 12px/100% Arial, Helvetica, sans-serif;
+}
+.fieldBorder .inputField {
+	background: #fff;
+	padding: 6px 6px 6px 8px;
+	border: solid 1px #bcbbbb;
+	outline: none;
+
+	-webkit-border-radius: 2em;
+	-moz-border-radius: 2em;
+	border-radius: 2em;
+
+	-moz-box-shadow: inset 0 1px 2px rgba(0,0,0,.2);
+	-webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.2);
+	box-shadow: inset 0 1px 2px rgba(0,0,0,.2);
+}
+.fieldBorder .searchbutton {
+	color: #fff;
+	border: solid 1px #494949;
+	font-size: 11px;
+	height: 27px;
+	width: 27px;
+	text-shadow: 0 1px 1px rgba(0,0,0,.6);
+
+	-webkit-border-radius: 2em;
+	-moz-border-radius: 2em;
+	border-radius: 2em;
+
+	background: #5f5f5f;
+	background: -webkit-gradient(linear, left top, left bottom, from(#9e9e9e), to(#454545));
+	background: -moz-linear-gradient(top,  #9e9e9e,  #454545);
+	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#9e9e9e', endColorstr='#454545'); /* ie7 */
+	-ms-filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#9e9e9e', endColorstr='#454545'); /* ie8 */
+}
+	</style>
 </head>
-<body>
+<body style="background: radial-gradient(at top right, rgba(255, 255, 0, 0.8), #006bff, rgba(3, 47, 167, 0.83), #009970, #148000)">
 	<table id="loginView" height="100%" width="100%" style="font-family: helvetica, sans-serif">
 		<tr height="33%">
 			<td width="33%"/>
 			<td style="text-align: center; vertical-align: bottom">
-				<p>Sign In to Short Sands</p>
+				<p style="font-family: Avenir-Light; font-size: 1.5rem; color: #f9fbfc">Sign-In to My Bible Q & A</p>
 			</td>
 			<td width="33%"/>
 		</tr>
 		<tr height="34%">
 			<td width="33%"/>
-			<td id="loginForm" width="34%" style="text-align: center; vertical-align: middle; border: solid; border-width: thin; border-radius: 4px">				
+			<td id="loginForm" width="34%" style="text-align: center; vertical-align: middle;">				
 				<p>
-					<!--<span>Username</span>-->
-					<input type="text" placeholder="Username" style="margin-bottom: 0px">
-				<!--</p>
-				<p>-->
-					<!--<span>Password</span>-->
-					<input type="password" placeholder="Password" style="margin-top: 0px">
-				</p>
-				<p>
-					<button>Sign In</button>
-					<a href="">Forgot Password</a>
+					<p class="fieldBorder" style="margin-bottom: 1px">
+					<input class="inputField" type="text" placeholder="Username" size="20" style="font-size: large">
+					</p>
+					<p class="fieldBorder" style="margin-top: 1px">
+					<input class="inputField" type="password" placeholder="Password" size="17" style="font-size: large">
+					<input type="button" class="searchbutton" value="Go">
+					</p>
 				</p>
 			</td>
 			<td width="33%"/>
 			<tr height="33%">
 				<td/>
-				<td><span id="loginResponse"></span></td>
+				<td style="text-align: center; font-size: 0.8rem; vertical-align: top"><span id="loginResponse"><a href="">Did you forgot your Username or Password?</a></span></td>
 				<td/>
 			</tr>
 	</table>
