Add ForgotView and Cleanup LoginView.

--- a/QAApp/views/ForgotView.html
+++ b/QAApp/views/ForgotView.html
@@ -65,25 +65,24 @@
 		<tr height="33%">
 			<td width="25%"/>
 			<td width="50%" style="text-align: center; vertical-align: bottom">
-				<p style="font-family: Avenir-Light; font-size: 1.5rem; color: #f9fbfc">Sign-In to My Bible Q & A</p>
+				<p style="font-family: Avenir-Light; font-size: 1.5rem; color: #f9fbfc">Forgot Username or Password?<br> Enter your email to get started.</p>
 			</td>
 			<td width="25%"/>
 		</tr>
 		<tr height="34%">
 			<td/>
-			<td id="loginForm" style="text-align: center; vertical-align: middle;">
-				<p class="fieldBorder" style="margin-bottom: 1px">
-					<input class="inputField" type="text" placeholder="Username" size="20" style="font-size: large">
-				</p>
-				<p class="fieldBorder" style="margin-top: 1px">
-					<input class="inputField" type="password" placeholder="Password" size="17" style="font-size: large">
-					<input type="button" class="goButton" value="Go">
+			<td id="loginForm" style="text-align: center; vertical-align: middle;">				
+				<p>
+					<p class="fieldBorder" style="">
+						<input class="inputField" type="text" placeholder="Email Address" size="24" style="font-size: large">
+						<input type="button" class="goButton" value="Go">
+					</p>
 				</p>
 			</td>
 			<td/>
 			<tr height="33%">
 				<td/>
-				<td style="text-align: center; font-size: 0.8rem; vertical-align: top;"><span id="loginResponse"><a href="" style="color:#f1f4b2">Did you forgot your Username or Password?</a></span></td>
+				<td style="text-align: center; font-size: 0.8rem; vertical-align: top;"><span id="forgotResponse"></span></td>
 				<td/>
 			</tr>
 	</table>
