--- a/QAApp/views/ForgotView.html
+++ b/QAApp/views/ForgotView.html
@@ -7,7 +7,7 @@
 .fieldBorder {
 	display: inline-block;
 	zoom: 1; /* ie7 hack for display:inline-block */
-	*display: inline;
+	/*display: inline;*/
 	border: solid 1px #d2d2d2;
 	padding: 3px 5px;
 	
