Fixed Button Centering in QueueView.

--- a/QAApp/views/QueueView.html
+++ b/QAApp/views/QueueView.html
@@ -89,14 +89,10 @@
 	<body onload="unitTest()" style="height: 100%">
 		<table id="queueView" style="height: 100%">
 			<tr style="height: 25%">
-				<!--<td style="width: 20%"></td>
-				<td style="width: 80%"></td>
-				<td style="width: 20%"></td>
-				-->
 			</tr>
 			<tr style="height: 5%">
 				<td style="width: 20%"></td>
-				<td style="width: 80%"><p id="numQuestions" class="queueText">num</p></td>
+				<td style="width: 60%"><p id="numQuestions" class="queueText">num</p></td>
 				<td style="width: 20%"></td>
 			<tr style="height: 5%">
 				<td></td>
@@ -110,7 +106,7 @@
 			</tr>
 			<tr style="height: 60%">
 				<td></td>
-				<td><button class="button bigrounded blue" onclick="assignQuestion()">Assign Me A Question</button></td>
+				<td style="text-align: center"><button class="button bigrounded blue" onclick="assignQuestion()">Assign Me A Question</button></td>
 				<td></td>
 		</table>
 	</body>
