--- a/QAApp/views/AnswerView.html
+++ b/QAApp/views/AnswerView.html
@@ -4,67 +4,84 @@
 		<title>Title</title>
 		<script type="text/javascript">
 		</script>
+		<link rel="StyleSheet" type="text/css" href="../www/Buttons.css">
 		<style type="text/css">
-			* {
+			html, *, *:before, *:after {
 				-moz-box-sizing: border-box;
 				-webkit-box-sizing: border-box;
 				box-sizing: border-box; 
-			}
-			.fieldTable {
-				border: solid; 
-				color: red; 
-				height: 50%; 
-				width: 100%;
 			}
 			.fieldRow {
 				width: 100%;
 			}
 			.labelCell {
 				width: 30%; 
-				text-align: right
+				text-align: right;
+				font-family: sans-serif;
+				font-size: 0.8rem;
+				color: gray;
 			}
 			.valueCell {
 				width: 60%;
 			}
+			input {
+				width: 95%; 
+				background: #f7e0b6;
+			}
+			span {
+				font-family: sans-serif;
+				font-size: 0.8rem;
+				color: gray;
+			}
+			textarea {
+				font-family: sans-serif;
+				font-size: 1rem;
+				background: #f7e0b6;
+			}
+			textarea#answer {
+				width: 100%; 
+				height: 90%;
+				background: rgba(0, 198, 238, 0.49);
+			}
 		</style>
 	</head>
-	<body style="height: 100%; width: 100%">
+	<body style="height: 100%; width: 100%;">
 		<div id="answerView" style="height: 100%; width: 100%;">
-			<div style="border: solid; height: 90%; width: 100%;">
+			<div style="height: 90%; width: 100%;">
 				<div style="height: 100%; width: 50%; float: left">
-					<table class="fieldTable">
+					<table style="height: 40%; width: 100%">
 						<tr class="fieldRow">
 							<td class="labelCell">Name</td>
-							<td class="valueCell"><input type="text" style="width: 100%" value="B"></input></td>
+							<td class="valueCell"><input id="studentName" type="text" value="B" readonly></input></td>
 						</tr>
 						<tr class="fieldRow">
 							<td class="labelCell">Reference</td>
-							<td class="valueCell"><input type="text" style="width: 100%;" value="C"></input></td>
+							<td class="valueCell"><input id="displayReference" type="text" value="C" readonly></input></td>
 						</tr>
 						<tr class="fieldRow">
 							<td class="labelCell">Submitted</td>
-							<td class="valueCell"><input type="text" style="width: 100%;" value="D"></input></td>
+							<td class="valueCell"><input id="submittedDt" type="text" value="D" readonly></input></td>
 						</tr>
 						<tr class="fieldRow">
 							<td class="labelCell">Expires</td>
-							<td class="valueCell"><input type="text" style="width: 100%;" value="E"></input></td>
+							<td class="valueCell"><input id="expiresDesc" type="text" value="E" readonly></input></td>
 						</tr>
-						<tr class="fieldRow">
+						<!--<tr class="fieldRow"> Include the hours in the Expires field, e.g. in 10 hours, 2 min.
 							<td class="labelCell">Expiration</td>
 							<td class="valueCell"><input type="text" style="width: 100%;" value="F"></input></td>
-						</tr>
+						</tr>-->
 					</table>
-					<div style="border: solid; color: purple; height: 50%; width: 100%; padding: 10px">
+					<div style="height: 60%; width: 100%; padding: 10px">
 						<span>Student Question</span>
-						<textarea style="width:100%; height:90%"></textarea>
+						<textarea id="question" style="width:100%; height:90%" readonly></textarea>
 					</div>
 				</div>
-				<div style="border: solid; color: blue; height: 100%; width: 50%; float: right; overflow: hidden; padding: 10px">
+				<div style="height: 100%; width: 50%; float: right; overflow: hidden; padding: 10px">
 					<span>Your Answer</span>
-					<textarea style="width:100%; height:90%"></textarea>
+					<textarea id="answer"></textarea>
 				</div>
 			</div>
-			<div style="border: solid green; height: 10%; width: 100%; text-align: center;">
+			<div style="height: 10%; width: 100%; text-align: center;">
 				<button class="button bigrounded blue" style="margin-right: 20px;" onclick="refuseQuestion()">Return Unanswered</button>
 				<button class="button bigrounded blue" style="margin-right: 20px;" onclick="anotherQuestion()">Different Question</button>
 				<button class="button bigrounded blue" style="margin-right: 20px;" onclick="saveDraft()">Save Draft Answer</button>
