--- a/QAApp/views/AnswerView.html
+++ b/QAApp/views/AnswerView.html
@@ -13,6 +13,7 @@
 			}
 			.fieldRow {
 				width: 100%;
+				height: 25%;
 			}
 			.labelCell {
 				width: 30%; 
@@ -25,7 +26,8 @@
 				width: 60%;
 			}
 			input {
-				width: 95%; 
+				width: 95%;
+				height: 100%;
 				background: #f7e0b6;
 			}
 			span {
@@ -40,12 +42,12 @@
 			}
 			textarea#answer {
 				width: 100%; 
-				height: 90%;
+				height: 100%;
 				background: rgba(0, 198, 238, 0.49);
 			}
 		</style>
 	</head>
-	<body style="height: 100%; width: 100%;">
+	<body style="height: 100%; margin-left: 5%; margin-right: 5%; width: auto; padding-top: 2%; padding-bottom: 2%; border: none">
 		<div id="answerView" style="height: 100%; width: 100%;">
 			<div style="height: 90%; width: 100%;">
 				<div style="height: 100%; width: 50%; float: left">
@@ -71,21 +73,21 @@
 							<td class="valueCell"><input type="text" style="width: 100%;" value="F"></input></td>
 						</tr>-->
 					</table>
-					<div style="height: 60%; width: 100%; padding: 10px">
+					<div style="height: 60%; width: 100%; padding-left: 2%; padding-right: 2%; padding-bottom: 2%; border: none">
 						<span>Student Question</span>
 						<textarea id="question" style="width:100%; height:90%" readonly></textarea>
 					</div>
 				</div>
-				<div style="height: 100%; width: 50%; float: right; overflow: hidden; padding: 10px">
+				<div style="height: 100%; width: 50%; float: right; overflow: hidden; padding-left: 2%; padding-right: 2%; padding-bottom: 2.5%; border: none">
 					<span>Your Answer</span>
 					<textarea id="answer"></textarea>
 				</div>
 			</div>
-			<div style="height: 10%; width: 100%; text-align: center;">
-				<button class="button bigrounded blue" style="margin-right: 20px;" onclick="refuseQuestion()">Return Unanswered</button>
-				<button class="button bigrounded blue" style="margin-right: 20px;" onclick="anotherQuestion()">Different Question</button>
-				<button class="button bigrounded blue" style="margin-right: 20px;" onclick="saveDraft()">Save Draft Answer</button>
-				<button class="button bigrounded blue" style="margin-right: 20px;" onclick="sendAnswer()">Send Answer</button>
+			<div style="height: 10%; width: 100%; text-align: center; padding-top: 10px">
+				<button class="button bigrounded blue" style="margin-right: 2%;" onclick="refuseQuestion()">Return Unanswered</button>
+				<button class="button bigrounded blue" style="margin-right: 2%;" onclick="anotherQuestion()">Different Question</button>
+				<button class="button bigrounded blue" style="margin-right: 2%;" onclick="saveDraft()">Save Draft Answer</button>
+				<button class="button bigrounded blue" style="margin-right: 2%;" onclick="sendAnswer()">Send Answer</button>
 			</div>
 		</div>
 	</body>
