Write Node program to generate ViewLibrary.js from views.

--- a/QAApp/views/ForgotView.html
+++ b/QAApp/views/ForgotView.html
@@ -63,7 +63,7 @@
 	</style>
 </head>
 <body style="height: 100%;">
-	<table id="loginView" style="height: 100%; width: 100%; font-family: helvetica, sans-serif; background: radial-gradient(at top right, rgba(255, 255, 0, 0.8), #006bff, rgba(3, 47, 167, 0.83), #009970, #148000)">
+	<table id="forgotView" style="height: 100%; width: 100%; font-family: helvetica, sans-serif; background: radial-gradient(at top right, rgba(255, 255, 0, 0.8), #006bff, rgba(3, 47, 167, 0.83), #009970, #148000)">
 		<tr style="height: 33%">
 			<td style="width: 25%"></td>
 			<td style="width: 50%; text-align: center; vertical-align: bottom">
