--- a/QAApp/views/HeaderView.html
+++ b/QAApp/views/HeaderView.html
@@ -4,7 +4,7 @@
 		<title>Title</title>
 	</head>
 	<body style="height: 100%">
-		<table style="height: 15%; width: 100%; background: radial-gradient(at top right, rgba(255, 255, 0, 0.8), #006bff, rgba(3, 47, 167, 0.83), #009970, #148000)">
+		<table id="headerView" style="height: 15%; width: 100%; background: radial-gradient(at top right, rgba(255, 255, 0, 0.8), #006bff, rgba(3, 47, 167, 0.83), #009970, #148000)">
 			<tr style="height: 100%"><td style="text-align: center; vertical-align: middle; color: white">My Bible Q & A</td><tr>
 		</table>
 	</body>
