--- a/QAApp/views/LoginView.html
+++ b/QAApp/views/LoginView.html
@@ -2,65 +2,7 @@
 <html style="height: 100%">
 <head>
 	<title>Title</title>
-	<style type="text/css">
-/* CSS styling of input fields taken from http://webdesignerwall.com/tutorials/beautiful-css3-search-form */
-.fieldBorder {
-	display: inline-block;
-	zoom: 1; /* ie7 hack for display:inline-block */
-	/*display: inline;*/
-	border: solid 1px #d2d2d2;
-	padding: 3px 5px;
-	
-	-webkit-border-radius: 2em;
-	-moz-border-radius: 2em;
-	border-radius: 2em;
-
-	-webkit-box-shadow: 0 1px 0px rgba(0,0,0,.1);
-	-moz-box-shadow: 0 1px 0px rgba(0,0,0,.1);
-	box-shadow: 0 1px 0px rgba(0,0,0,.1);
-
-	background: #f1f1f1;
-	background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#ededed));
-	background: -moz-linear-gradient(top,  #fff,  #ededed);
-	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#ededed'); /* ie7 */
-	-ms-filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#ededed'); /* ie8 */
-}
-.fieldBorder input {
-	font: normal 12px/100% Arial, Helvetica, sans-serif;
-}
-.fieldBorder .inputField {
-	background: #fff;
-	padding: 6px 6px 6px 8px;
-	border: solid 1px #bcbbbb;
-	outline: none;
-
-	-webkit-border-radius: 2em;
-	-moz-border-radius: 2em;
-	border-radius: 2em;
-
-	-moz-box-shadow: inset 0 1px 2px rgba(0,0,0,.2);
-	-webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.2);
-	box-shadow: inset 0 1px 2px rgba(0,0,0,.2);
-}
-.fieldBorder .goButton {
-	color: #fff;
-	border: solid 1px #494949;
-	font-size: 11px;
-	height: 27px;
-	width: 27px;
-	text-shadow: 0 1px 1px rgba(0,0,0,.6);
-
-	-webkit-border-radius: 2em;
-	-moz-border-radius: 2em;
-	border-radius: 2em;
-
-	background: #5f5f5f;
-	background: -webkit-gradient(linear, left top, left bottom, from(#9e9e9e), to(#454545));
-	background: -moz-linear-gradient(top,  #9e9e9e,  #454545);
-	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#9e9e9e', endColorstr='#454545'); /* ie7 */
-	-ms-filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#9e9e9e', endColorstr='#454545'); /* ie8 */
-}
-	</style>
+	<link rel="stylesheet" type="text/css" href="../www/Fields.css">
 </head>
 <body style="height: 100%;">
 	<table id="loginView" style="height: 100%; width: 100%; font-family: helvetica, sans-serif; background: radial-gradient(at top right, rgba(255, 255, 0, 0.8), #006bff, rgba(3, 47, 167, 0.83), #009970, #148000);">
