Transition to ForgotView is working.

--- a/QAApp/views/LoginView.html
+++ b/QAApp/views/LoginView.html
@@ -27,7 +27,9 @@
 			<td></td>
 		<tr style="height: 33%">
 			<td></td>
-			<td style="text-align: center; font-size: 0.8rem; vertical-align: top;"><span id="loginResponse"><a href="" style="color:#f1f4b2">Did you forgot your Username or Password?</a></span></td>
+			<td style="text-align: center; font-size: 0.8rem; vertical-align: top;"><span id="loginResponse">
+				<a onclick="transitionToForgotView()" style="color:#f1f4b2;">Did you forgot your Username or Password?</a>
+			</span></td>
 			<td></td>
 		</tr>
 	</table>
