--- a/QAApp/views/LoginView.html
+++ b/QAApp/views/LoginView.html
@@ -21,7 +21,7 @@
 				</p>
 				<p class="fieldBorder" style="margin-top: 1px">
 					<input class="inputField" type="password" placeholder="Password" size="17" style="font-size: large">
-					<input type="button" class="goButton" value="Go">
+					<input type="button" class="goButton" value="Go" onclick="transitionToQueueView()">
 				</p>
 			</td>
 			<td></td>
