All of the View Transitions are working.

--- a/QAApp/views/QueueView.html
+++ b/QAApp/views/QueueView.html
@@ -33,15 +33,10 @@
 			</tr>
 			<tr style="height: 60%">
 				<td></td>
-				<td style="text-align: center"><button class="button bigrounded blue" onclick="assignQuestion()">Assign Me A Question</button></td>
+				<td style="text-align: center"><button class="button bigrounded blue" onclick="assignMeAQuestion()">Assign Me A Question</button></td>
 				<td></td>
 			</tr>
 		</table>
-		<script type="text/javascript">
-			function assignQuestion() {
-				console.log("Assign Question Clicked");
-			}
-		</script>
 		<style type="text/css">
 			p.queueText {
 				font-family: sans-serif;
