--- a/QAApp/views/AnswerView.html
+++ b/QAApp/views/AnswerView.html
@@ -2,9 +2,54 @@
 <html style="height: 100%; width: 100%">
 	<head>
 		<title>Title</title>
-		<script type="text/javascript">
+		<script type="text/javascript" src="../www/AnswerViewModel.js"></script>
+		<script>
+			function loadPageData() {
+				var answerModel = new AnswerViewModel();
+				answerModel.display();
+			}
 		</script>
 		<link rel="StyleSheet" type="text/css" href="../www/Buttons.css">
+	</head>
+	<body onload="loadPageData()" style="height: 100%; margin-left: 5%; margin-right: 5%; width: auto; padding-top: 2%; padding-bottom: 2%; border: none">
+		<div id="answerView" style="height: 100%; width: 100%; background: white">
+			<div style="height: 90%; width: 100%;">
+				<div style="height: 100%; width: 50%; float: left">
+					<table style="height: 40%; width: 100%">
+						<tr class="fieldRow">
+							<td class="labelCell">Name</td>
+							<td class="valueCell"><input id="studentName" type="text" value="B" readonly></input></td>
+						</tr>
+						<tr class="fieldRow">
+							<td class="labelCell">Reference</td>
+							<td class="valueCell"><input id="displayReference" type="text" value="C" readonly></input></td>
+						</tr>
+						<tr class="fieldRow">
+							<td class="labelCell">Submitted</td>
+							<td class="valueCell"><input id="submittedDt" type="text" value="D" readonly></input></td>
+						</tr>
+						<tr class="fieldRow">
+							<td class="labelCell">Expires</td>
+							<td class="valueCell"><input id="expiresDesc" type="text" value="E" readonly></input></td>
+						</tr>
+					</table>
+					<div style="height: 60%; width: 100%; padding-left: 2%; padding-right: 2%; padding-bottom: 2%; border: none">
+						<span>Student Question</span>
+						<textarea id="question" style="width:100%; height:90%" readonly></textarea>
+					</div>
+				</div>
+				<div style="height: 100%; width: 50%; float: right; overflow: hidden; padding-left: 2%; padding-right: 2%; padding-bottom: 2.5%; border: none">
+					<span>Your Answer</span>
+					<textarea id="answer"></textarea>
+				</div>
+			</div>
+			<div style="height: 10%; width: 100%; text-align: center; padding-top: 10px">
+				<button class="button bigrounded blue" style="margin-right: 2%;" onclick="refuseQuestion()">Return Unanswered</button>
+				<button class="button bigrounded blue" style="margin-right: 2%;" onclick="anotherQuestion()">Different Question</button>
+				<button class="button bigrounded blue" style="margin-right: 2%;" onclick="saveDraft()">Save Draft Answer</button>
+				<button class="button bigrounded blue" style="margin-right: 2%;" onclick="sendAnswer()">Send Answer</button>
+			</div>
+		</div>
 		<style type="text/css">
 			html, *, *:before, *:after {
 				-moz-box-sizing: border-box;
@@ -29,6 +74,8 @@
 				width: 95%;
 				height: 100%;
 				background: #f7e0b6;
+				border: none;
+				padding: 10px;
 			}
 			span {
 				font-family: sans-serif;
@@ -39,56 +86,14 @@
 				font-family: sans-serif;
 				font-size: 1rem;
 				background: #f7e0b6;
+				border: none;
 			}
 			textarea#answer {
 				width: 100%; 
 				height: 100%;
 				background: rgba(0, 198, 238, 0.49);
+				border: solid thin;
 			}
 		</style>
-	</head>
-	<body style="height: 100%; margin-left: 5%; margin-right: 5%; width: auto; padding-top: 2%; padding-bottom: 2%; border: none">
-		<div id="answerView" style="height: 100%; width: 100%;">
-			<div style="height: 90%; width: 100%;">
-				<div style="height: 100%; width: 50%; float: left">
-					<table style="height: 40%; width: 100%">
-						<tr class="fieldRow">
-							<td class="labelCell">Name</td>
-							<td class="valueCell"><input id="studentName" type="text" value="B" readonly></input></td>
-						</tr>
-						<tr class="fieldRow">
-							<td class="labelCell">Reference</td>
-							<td class="valueCell"><input id="displayReference" type="text" value="C" readonly></input></td>
-						</tr>
-						<tr class="fieldRow">
-							<td class="labelCell">Submitted</td>
-							<td class="valueCell"><input id="submittedDt" type="text" value="D" readonly></input></td>
-						</tr>
-						<tr class="fieldRow">
-							<td class="labelCell">Expires</td>
-							<td class="valueCell"><input id="expiresDesc" type="text" value="E" readonly></input></td>
-						</tr>
-						<!--<tr class="fieldRow"> Include the hours in the Expires field, e.g. in 10 hours, 2 min.
-							<td class="labelCell">Expiration</td>
-							<td class="valueCell"><input type="text" style="width: 100%;" value="F"></input></td>
-						</tr>-->
-					</table>
-					<div style="height: 60%; width: 100%; padding-left: 2%; padding-right: 2%; padding-bottom: 2%; border: none">
-						<span>Student Question</span>
-						<textarea id="question" style="width:100%; height:90%" readonly></textarea>
-					</div>
-				</div>
-				<div style="height: 100%; width: 50%; float: right; overflow: hidden; padding-left: 2%; padding-right: 2%; padding-bottom: 2.5%; border: none">
-					<span>Your Answer</span>
-					<textarea id="answer"></textarea>
-				</div>
-			</div>
-			<div style="height: 10%; width: 100%; text-align: center; padding-top: 10px">
-				<button class="button bigrounded blue" style="margin-right: 2%;" onclick="refuseQuestion()">Return Unanswered</button>
-				<button class="button bigrounded blue" style="margin-right: 2%;" onclick="anotherQuestion()">Different Question</button>
-				<button class="button bigrounded blue" style="margin-right: 2%;" onclick="saveDraft()">Save Draft Answer</button>
-				<button class="button bigrounded blue" style="margin-right: 2%;" onclick="sendAnswer()">Send Answer</button>
-			</div>
-		</div>
 	</body>
 </html>
