Minor Changes to AnswerView and ViewModel.

--- a/QAApp/views/AnswerView.html
+++ b/QAApp/views/AnswerView.html
@@ -76,15 +76,16 @@
 				background: #f7e0b6;
 				border: none;
 				padding: 10px;
+				font-size: 0.9em;
 			}
 			span {
 				font-family: sans-serif;
-				font-size: 0.8rem;
+				font-size: 0.9rem;
 				color: gray;
 			}
 			textarea {
 				font-family: sans-serif;
-				font-size: 1rem;
+				font-size: 0.9rem;
 				background: #f7e0b6;
 				border: none;
 			}
