--- a/QAApp/views/QueueView.html
+++ b/QAApp/views/QueueView.html
@@ -33,7 +33,7 @@
 			</tr>
 			<tr style="height: 60%">
 				<td></td>
-				<td style="text-align: center"><button class="button bigrounded blue" onclick="assignMeAQuestion()">Assign Me A Question</button></td>
+				<td style="text-align: center"><button id="assign" class="button bigrounded blue" onclick="assignQuestion()">Assign Me A Question</button></td>
 				<td></td>
 			</tr>
 		</table>
