--- a/QAApp/www/Fields.css
+++ b/QAApp/www/Fields.css
@@ -17,8 +17,8 @@
 	background: #f1f1f1;
 	background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#ededed));
 	background: -moz-linear-gradient(top,  #fff,  #ededed);
-	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#ededed'); /* ie7 */
-	-ms-filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#ededed'); /* ie8 */
+	/* filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#ededed');  ie7 */
+	/* -ms-filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#ededed');  ie8 */
 }
 .fieldBorder input {
 	font: normal 12px/100% Arial, Helvetica, sans-serif;
@@ -52,6 +52,6 @@
 	background: #5f5f5f;
 	background: -webkit-gradient(linear, left top, left bottom, from(#9e9e9e), to(#454545));
 	background: -moz-linear-gradient(top,  #9e9e9e,  #454545);
-	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#9e9e9e', endColorstr='#454545'); /* ie7 */
-	-ms-filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#9e9e9e', endColorstr='#454545'); /* ie8 */
+	/* filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#9e9e9e', endColorstr='#454545'); ie7 */
+	/* -ms-filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#9e9e9e', endColorstr='#454545'); ie8 */
 }
