Progress on Roles Form Layout.

--- a/QAApp/www/views/QueueView.html
+++ b/QAApp/www/views/QueueView.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="../Buttons.css">
 		<script type="text/javascript" src="../QueueViewModel.js"></script>
 	</head>
-	<body onload="loadPageData()" style="width: 100%">
+	<body style="width:100%">
 		<div id="queueView">
 			<!-- <p class="queue">Unassigned Questions</p>
 			<table class="queue">
