--- a/QAApp/www/views/RolesView.html
+++ b/QAApp/www/views/RolesView.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="height: 100%">
+<html style="height:100%">
 <head>
 	<title>Roles View</title>
 </head>
@@ -12,23 +12,80 @@
 		border: solid;
 	}
 </style>
-<body style="height: 100%">
-	<h1 style="text-align: center">Manage Roles</h1>
-	<table id="rolesView" style="width: 90%; font-family: helvetica, sans-serif; background: radial-gradient(at top right, rgba(255, 255, 0, 0.8), #006bff, rgba(3, 47, 167, 0.83), #009970, #148000);">
-		<tr><th colspan="3">Person</th><th colspan="5">Role</th></tr>
-		<tr><th>&nbsp;</th><th>Fullname</th><th>Pseudonym</th><th>Position</th><th>Version</th><th>Started</th><th>Count</th><th>&nbsp</th></tr>
-		<tbody id="rolesBody">
-			<tr>
-				<td>&nbsp;</td>
-				<td>Bob Smith</td>
-				<td>Bob</td>
-				<td>Teacher</td>
-				<td>KVJ</td>
-				<td>3/3/2013</td>
-				<td>20</td>
-				<td>&nbsp;</td>
+<body style="height:100%">
+	<div id="rolesView" style="width:100%; height:100%; margin:0; padding:0; border:solid; background: radial-gradient(at top right, rgba(255, 255, 0, 0.8), #006bff, rgba(3, 47, 167, 0.83), #009970, #148000)">
+		<h1 class="role">Manage Roles</h1>
+		<table id="rolesView" class="role">
+			<tr class="role">
+				<th class="role" colspan="3">Person</th>
+				<th class="role" colspan="5">Role</th>
 			</tr>
-		</tbody>
-	</table>
+			<tr class="role">
+				<th class="role">&nbsp;</th>
+				<th class="role">Fullname</th>
+				<th class="role">Pseudonym</th>
+				<th class="role">Position</th>
+				<th class="role">Version</th>
+				<th class="role">Started</th>
+				<th class="role">Count</th>
+				<th class="role">&nbsp;</th>
+			</tr>
+			<tbody id="rolesBody" class="role">
+				<tr class="role">
+					<td class="role">&nbsp;</td>
+					<td class="role">Bob Smith</td>
+					<td class="role">Bob</td>
+					<td class="role">Teacher</td>
+					<td class="role">KVJ</td>
+					<td class="role">3/3/2013</td>
+					<td class="role">20</td>
+					<td class="role">&nbsp;</td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+	<style>
+	h1.role {
+		margin-top:30px;
+		font-family: sans-serif;
+		text-transform: uppercase;
+		letter-spacing: 2px;
+		font-size: x-large;
+		color: #FFFFFF;/*#6D929B;*/
+		text-align:center;
+	}
+	table.role {
+		width: 80%;
+		background: white;
+		margin: 30px auto;
+		border: none;
+	}
+	th.role {
+		border: solid;
+		font-family: sans-serif;
+		font-size: medium;
+		color: grey;
+		color: #6D929B;
+		border-right: 1px solid #C1DAD7;
+		border-bottom: 1px solid #C1DAD7;
+		border-top: 1px solid #C1DAD7;
+		letter-spacing: 2px;
+		text-transform: uppercase;
+		text-align: center;
+		padding: 6px 6px 6px 12px;
+		background: #CAE8EA;
+	}
+	td.role {
+		border: solid;
+		border-right: 1px solid #C1DAD7;
+		border-bottom: 1px solid #C1DAD7;
+		background: #ffffff;
+		padding: 6px 6px 6px 12px;
+		color: #6D929B;
+		font-family: sans-serif;
+		font-size: large;
+		text-align: center;
+	}
+	</style>
 </body>
 </html>
