--- a/QAApp/www/views/RolesView.html
+++ b/QAApp/www/views/RolesView.html
@@ -23,7 +23,7 @@
 				<th id="it2" class="role" style="font-size:1.7rem; padding:6px;"></th>
 			</tr>
 			<tbody id="rolesBody" class="role">
-				<tr class="role">
+				<!-- <tr class="role">
 					<td class="role"><input type="checkbox" onclick="personEdit()"></td>
 					<td class="role">Bob Smith</td>
 					<td class="role">Bob</td>
@@ -32,7 +32,7 @@
 					<td class="role">3/3/2013</td>
 					<td class="role">20</td>
 					<td class="role"><input type="checkbox" onclick="roleEdit()"</td>
-				</tr>
+				</tr> -->
 			</tbody>
 		</table>
 	</div>
