RolesViewModel is displaying teachers and roles.

--- a/QAApp/www/views/QueueView.html
+++ b/QAApp/www/views/QueueView.html
@@ -7,7 +7,8 @@
 	</head>
 	<body style="width:100%">
 		<div id="queueView">
-			<!-- <p class="queue">Unassigned Questions</p>
+			<!-- <p style="text-align: center"><button id="assignKJV" class="button bigrounded blue" onclick="assignQuestion()">Manage Roles</button></p>
+			<p class="queue">Unassigned Questions</p>
 			<table class="queue">
 				<tr class="queue">
 					<th class="queue" colspan="3">KJV</th>
