Added New Pass Phrase form.

--- a/QAApp/www/views/RolesView.html
+++ b/QAApp/www/views/RolesView.html
@@ -77,6 +77,12 @@
 		font-size: large;
 		text-align: center;
 	}
+	td.roleHead {
+		border-right: 1px solid #C1DAD7;
+		border-bottom: 1px solid #C1DAD7;
+		border-top: 1px solid #C1DAD7;
+		background: #CAE8EA;
+	}
 	</style>
 	<script>
 		function loadPageData() {
