Register new user form is tested.

--- a/QAApp/www/views/AnswerView.html
+++ b/QAApp/www/views/AnswerView.html
@@ -9,7 +9,7 @@
 				answerModel.display();
 			}
 		</script>
-		<link rel="StyleSheet" type="text/css" href="../www/Buttons.css">
+		<link rel="StyleSheet" type="text/css" href="../Buttons.css">
 	</head>
 	<body onload="loadPageData()" style="height: 100%; margin-left: 5%; margin-right: 5%; width: auto; padding-top: 2%; padding-bottom: 2%; border: none">
 		<div id="answerView" style="height: 100%; width: 100%; background: white">
