Give columns a fixed with by percentage.

--- a/QAApp/www/views/RolesView.html
+++ b/QAApp/www/views/RolesView.html
@@ -16,13 +16,13 @@
 				<th class="role" colspan="5">Responsibility</th>
 			</tr>
 			<tr class="role">
-				<th id="it1" class="role" style="font-size: 1.7rem; padding:6px;"></th>
-				<th class="role">Fullname</th>
-				<th class="role">Pseudonym</th>
-				<th class="role">Position</th>
-				<th class="role">Version</th>
-				<th class="role">Started</th>
-				<th id="it2" class="role" style="font-size:1.7rem; padding:6px;"></th>
+				<th id="it1" class="role" style="font-size:1.7rem; padding:6px; width:5%"></th>
+				<th class="role" style="width:30%">Fullname</th>
+				<th class="role" style="width:15%">Pseudonym</th>
+				<th class="role" style="width:15%">Position</th>
+				<th class="role" style="width:15%">Version</th>
+				<th class="role" style="width:15%">Started</th>
+				<th id="it2" class="role" style="font-size:1.7rem; padding:6px; width:5%"></th>
 			</tr>
 			<tbody id="rolesBody" class="role">
 				<!-- <tr class="role">
