Added pencils to RolesView header.

--- a/QAApp/www/views/RolesView.html
+++ b/QAApp/www/views/RolesView.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<link rel="StyleSheet" type="text/css" href="../Buttons.css">
 </head>
-<body style="height:100%" onload="loadPageData()">
+<body style="height:100%" onload="loadPageFunction()">
 	<div id="rolesView" style="width:100%; height:100%; margin:0; padding:0; background: white;">
 		<h1 class="role">Manage Responsibilities</h1>
 		<table style="width:75%; margin:auto">
@@ -95,7 +95,7 @@
 	}
 	</style>
 	<script>
-		function loadPageData() {
+		function loadPageFunction() {
 			var pencil = String.fromCharCode('0x270E');
 			var node1 = document.getElementById('it1');
 			node1.textContent = pencil;
