Made all backgrounds solid white.

--- a/QAApp/www/views/AnswerView.html
+++ b/QAApp/www/views/AnswerView.html
@@ -12,7 +12,7 @@
 		<link rel="StyleSheet" type="text/css" href="../Buttons.css">
 	</head>
 	<body onload="loadPageData()" style="height: 100%; margin-left: 5%; margin-right: 5%; width: auto; padding-top: 2%; padding-bottom: 2%; border: none">
-		<div id="answerView" style="height: 100%; width: 100%; background: white">
+		<div id="answerView" style="height: 100%; width: 100%;">
 			<div style="height: 90%; width: 100%;">
 				<div style="height: 100%; width: 50%; float: left">
 					<table style="height: 40%; width: 100%">
