--- a/QAApp/www/views/RolesView.html
+++ b/QAApp/www/views/RolesView.html
@@ -6,7 +6,7 @@
 	<link rel="StyleSheet" type="text/css" href="../Buttons.css">
 </head>
 <body style="height:100%" onload="loadPageFunction()">
-	<div id="rolesView" style="width:100%; height:100%; margin:0; padding:0; background: white;">
+	<div id="rolesView" style="width:100%; height:100%; margin:0; padding:0;">
 		<h1 class="role">Manage Responsibilities</h1>
 		<table style="width:75%; margin:auto">
 			<tr>
