--- a/QAApp/www/views/QueueView.html
+++ b/QAApp/www/views/QueueView.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html style="width:100%">
+<html style="width:100%; height:100%">
 	<head>
 		<title>Title</title>
 		<link rel="stylesheet" type="text/css" href="../Buttons.css">
 		<script type="text/javascript" src="../QueueViewModel.js"></script>
 	</head>
-	<body style="width:100%">
+	<body style="width:100%; height:100%">
 		<div id="queueView">
 			<!-- <p style="text-align: center"><button id="assignKJV" class="button bigrounded blue" onclick="assignQuestion()">Manage Roles</button></p>
 			<p class="queue">Unassigned Questions</p>
