Changed QueueView to have buttons and heading in the html template.

--- a/QAApp/www/views/QueueView.html
+++ b/QAApp/www/views/QueueView.html
@@ -7,9 +7,11 @@
 	</head>
 	<body style="width:100%; height:100%">
 		<div id="queueView">
-			<!-- <p style="text-align: center"><button id="assignKJV" class="button bigrounded blue" onclick="assignQuestion()">Manage Roles</button></p>
+			<p style="text-align:center"><button id="manageBtn" class="button bigrounded blue" onclick="presentRoles()">Manage Roles</button></p>
 			<p class="queue">Unassigned Questions</p>
-			<table class="queue">
+		</div>
+		<div id="queueTables">
+			<!-- <table class="queue">
 				<tr class="queue">
 					<th class="queue" colspan="3">KJV</th>
 				</tr>
